about us - homepage links correction - alignemtn issues fix

--- a/wp-content/themes/ar-freight/scss/_about-page.scss
+++ b/wp-content/themes/ar-freight/scss/_about-page.scss
@@ -41,6 +41,9 @@
                 font-size: 14px;
                 color: #757575;
                 line-height: 22px;
+                b{
+                  font-family: Roboto-Bd;
+                }
             }
         }
         .about-content {
