--- a/wp-content/themes/ar-freight/scss/_banner.scss
+++ b/wp-content/themes/ar-freight/scss/_banner.scss
@@ -19,6 +19,8 @@
                                 }
                                 img {
                                     width: 100%;
+                                    object-fit: cover;
+                                    object-position: top;
                                 }
                                 &:after{
                                     //content:"";
