--- a/wp-content/themes/ar-freight/scss/_certificate.scss
+++ b/wp-content/themes/ar-freight/scss/_certificate.scss
@@ -21,7 +21,7 @@
                     .certificates__profile__dp {
                         width: 100%;
                         img {
-                            width: 80%;
+                            max-width: 80%;
                             margin: 0 auto;
                             padding: 20px;
                         }
